@@ -1,9 +1,16 @@
+"""
+This module defines functionality to automatically configure Morepath.
+
+:func:`morepath.scan`, :func:`morepath.autoscan`, :func:`morepath.autosetup`
+are part of the public API.
+"""
+
+import sys
 import dectate
 import importscan
 import importlib
 import pkg_resources
 from .error import AutoImportError
-from .framehack import caller_package
 
 
 def scan(package=None, ignore=None, handle_error=None):
@@ -45,13 +52,14 @@ def autoscan(ignore=None):
        ``morepath`` in the ``install_requires`` list of the
        ``setup.py`` file.
 
-     - The setup.py name is the same as the name of the distributed
-       package or module. For example: if the module inside the
-       package is named ``myapp`` the package must be named ``myapp``
-       as well (not ``my-app`` or ``MyApp``).
+     - The ``setup.py`` name is the same as the name of the
+       distributed package or module. For example: if the module
+       inside the package is named ``myapp`` the package must be named
+       ``myapp`` as well (not ``my-app`` or ``MyApp``).
 
-    If the setup.py differs from the package name, it's possible
-    to specify the module morepath should scan using entry points::
+    If the ``setup.py`` name differs from the package name, it's
+    possible to specify the module morepath should scan using entry
+    points::
 
         setup(name='some-package',
           ...
@@ -100,6 +108,7 @@ def autoscan(ignore=None):
       during scanning. Optional. If ommitted, ignore ``.test`` and
       ``.tests`` packages by default. See :func:`importscan.scan` for
       more details.
+
     """
     if ignore is None:
         ignore = []
@@ -111,7 +120,7 @@ def autoscan(ignore=None):
 def autosetup(ignore=None):
     """Automatically scan and commit Morepath configuration.
 
-    As with :func:`autoconfig`, but also commits
+    As with :func:`morepath.autoscan`, but also commits
     configuration. This can be your one-stop function to load all
     Morepath configuration automatically.
 
@@ -145,40 +154,17 @@ def autosetup(ignore=None):
     dectate.autocommit()
 
 
-class DependencyMap(object):
-    def __init__(self):
-        self._d = {}
-        self._dists = {}
-
-    def load(self):
-        for dist in pkg_resources.working_set:
-            self._dists[dist.project_name] = dist
-            for r in dist.requires():
-                self._d.setdefault(
-                    dist.project_name, set()).add(r.project_name)
-
-    def depends(self, project_name, on_project_name):
-        dependent_project_names = self._d.get(project_name, set())
-        if on_project_name in dependent_project_names:
-            return True
-        for n in dependent_project_names:
-            if self.depends(n, on_project_name):
-                return True
-        return False
-
-    def relevant_dists(self, on_project_name):
-        for dist in pkg_resources.working_set:
-            if not self.depends(dist.project_name, on_project_name):
-                continue
-            yield dist
-
-
 def morepath_packages():
-    """ Yields modules that depend on morepath. Each such module is
+    """Iterable of modules that depend on morepath. Each such module is
     imported before it is returned.
 
-    If the setup.py name differs from the name of the distributed package or
-    module, the import will fail. See :func:`autoconfig` for more information.
+    If the ``setup.py`` name differs from the name of the distributed
+    package or module, the import will fail. See
+    :func:`morepath.autoscan` for more information.
+
+    :return: Iterable of modules that depend on Morepath. The modules
+      are typically the ``__init__.py`` modules of packages as declared
+      by ``setup.py``.
 
     """
     m = DependencyMap()
@@ -188,14 +174,76 @@ def morepath_packages():
         yield import_package(distribution)
 
 
+def import_package(distribution):
+    """
+    Takes a pkg_resources distribution and loads the module contained
+    in it, if it matches the rules layed out in :func:`morepath.autoscan`.
+    """
+    try:
+        return importlib.import_module(get_module_name(distribution))
+    except ImportError:
+        raise AutoImportError(distribution.project_name)
+
+
+class DependencyMap(object):
+    """A registry that tracks dependencies between distributions.
+
+    Used by :func:`morepath_packages` to find installed Python distributions
+    that depend on Morepath, directly or indirectly.
+    """
+    def __init__(self):
+        self._d = {}
+        self._dists = {}
+
+    def load(self):
+        """Fill the registry with dependency information.
+        """
+        for dist in pkg_resources.working_set:
+            self._dists[dist.project_name] = dist
+            for r in dist.requires():
+                self._d.setdefault(
+                    dist.project_name, set()).add(r.project_name)
+
+    def depends(self, project_name, on_project_name):
+        """Check whether project transitively depends on another.
+
+        A project depends on another project if it directly or
+        indirectly requires the other project.
+
+        :param project_name: Python distribution name.
+        :param on_project_name: Python distribution name it depends on.
+        :return: True if ``project_name`` depends on ``on_project_name``.
+        """
+        dependent_project_names = self._d.get(project_name, set())
+        if on_project_name in dependent_project_names:
+            return True
+        for n in dependent_project_names:
+            if self.depends(n, on_project_name):
+                return True
+        return False
+
+    def relevant_dists(self, on_project_name):
+        """Iterable of distributions that depend on project.
+
+        Dependency is transitive.
+
+        :param on_project_name: Python distribution name
+        :return: iterable of Python distribution objects that depend on
+          project
+        """
+        for dist in pkg_resources.working_set:
+            if not self.depends(dist.project_name, on_project_name):
+                continue
+            yield dist
+
+
 def get_module_name(distribution):
-    """ Determines the module name to import from the given distribution.
+    """Determines the module name to import from the given distribution.
 
     If an entry point named ``scan`` is found in the group ``morepath``,
     it's value is used. If not, the project_name is used.
 
-    See :func:`autoconfig` for details and an example.
-
+    See :func:`morepath.autoscan` for details and an example.
     """
     if hasattr(distribution, 'get_entry_map'):
         entry_points = distribution.get_entry_map('morepath')
@@ -210,12 +258,32 @@ def get_module_name(distribution):
     return distribution.project_name.replace('-', '_')
 
 
-def import_package(distribution):
-    """ Takes a pkg_resources distribution and loads the module contained
-    in it, if it matches the rules layed out in :func:`autoconfig`.
+# taken from pyramid.path
 
+def caller_module(level=2):
+    """Give module where calling function is defined.
+
+    :level: levels deep to look up the stack frame
+    :return: a Python module
     """
-    try:
-        return importlib.import_module(get_module_name(distribution))
-    except ImportError:
-        raise AutoImportError(distribution.project_name)
+    module_globals = sys._getframe(level).f_globals
+    module_name = module_globals.get('__name__') or '__main__'
+    module = sys.modules[module_name]
+    return module
+
+
+def caller_package(level=2):
+    """Give package where calling function is defined.
+
+    :level: levels deep to look up the stack frame
+    :return: a Python module (representing the ``__init__.py`` of a package)
+    """
+    # caller_module in arglist for tests
+    module = caller_module(level + 1)
+    f = getattr(module, '__file__', '')
+    if ('__init__.py' in f) or ('__init__$py' in f):  # empty at >>>
+        # Module is a package
+        return module
+    # Go up one level to get package
+    package_name = module.__name__.rsplit('.', 1)[0]
+    return sys.modules[package_name]
