@@ -1,21 +1,0 @@
-import sys
-
-
-# taken from pyramid.path
-def caller_module(level=2, sys=sys):
-    module_globals = sys._getframe(level).f_globals
-    module_name = module_globals.get('__name__') or '__main__'
-    module = sys.modules[module_name]
-    return module
-
-
-def caller_package(level=2, caller_module=caller_module):
-    # caller_module in arglist for tests
-    module = caller_module(level + 1)
-    f = getattr(module, '__file__', '')
-    if ('__init__.py' in f) or ('__init__$py' in f):  # empty at >>>
-        # Module is a package
-        return module
-    # Go up one level to get package
-    package_name = module.__name__.rsplit('.', 1)[0]
-    return sys.modules[package_name]
