@@ -9,7 +9,11 @@ CHANGES
   If you try to catch them in your code, just remove the whole
   ``except`` statement as they were never raised.
 
-- Refactor internals of publishing/view engine.
+- Refactor internals of publishing/view engine. Reg is used more
+  effectively for view lookup, order of some parameters is reversed
+  for consistency with public APIs.
+
+- The framehack module was merged into ``autosetup``.
 
 - Documented the internals of Morepath, see implementation document.
 
